# cdd-publisher

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  alpine.Dockerfile  debian.Dockerfile  final_fix.py  final_fix3.py  fix_all.py  fix_cfg.py  fix_coverage.py  fix_create_group.py  fix_final_clippy.py  fix_final_coverage.py  fix_helper.py  fix_ok.py  fix_publish.py  fix_publish2.py  fix_run_once.py  fix_storage.py  fix_storage_again.py  fix_test.py  fix_test_final.py  fix_tests.py  fix_tests2.py  fix_worker.py  fix_worker_absolute.py  fix_worker_final.py  fix_worker_final2.py  fix_worker_returns.py  fix_worker_tests.py  revert_cfg.py  revert_to_expect.py
.github/workflows/: ci.yml
scripts/: update_shields.sh
src/: audit.rs  error.rs  main.rs  publish.rs  storage.rs  worker.rs
