[package]
name = "cdd-publisher"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
derive_more = { version = "2.1.1", features = ["display", "from", "error"] }
flate2 = "1.1.9"
redis = { version = "1.2.3", features = ["tokio-comp"] }
reqwest = { version = "0.13.4", default-features = false, features = ["stream", "native-tls", "charset", "http2", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tar = "0.4.46"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
zip = "8.6.0"

[lints.rust]
missing_docs = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)', 'cfg(coverage)'] }

[lints.clippy]
unwrap_used = "deny"
pedantic = { level = "warn", priority = -1 }

[dev-dependencies]
mockall = "0.14.0"
tokio-test = "0.4.5"
wiremock = "0.6.5"

